# StrataExtract

./: .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  Credits.rtf  Documentation.DoxygenConfig  README  README.md
Docs/CodeExamples/: Boost Threads + Magick++.cpp  Magick++ Conversion  convert-to-xml.sh  file-tree-parser.sh  mpqexample.cpp  name.sh  vectorplay.cpp  xmlexample.c  xmlexample2.cpp
Docs/DesignDocs/: UMLDesign.dia
Docs/SampleConfigs/: BareBones.StrataExtract  StarcraftBW-Stardat.list  StarcraftBW-Stardat.tmp  Stargus.StrataExtract  Wargus1.StrataExtract  temp  temp2  temp3
Docs/StormLibDocs/stormlib/: sfilecreatefile.html  sfileenumlocales.html  sfileextractfile.html  sfilegetfileinfo.html  sfilegetfilename.html  sfileopenarchive.html  sfileopenfileex.html  sfileopenpatcharchive.html  sfilereadfile.html  sfileremovefile.html  sfilesetmaxfilecount.html  sfileverifyfile.html
Docs/UnitTestMedia/: junkfile
Libraries/StormLib/src/adpcm/: adpcm.cpp
Source/: main.cpp  main.hpp
Source/Archives/: StrataArchive.cpp  StrataArchive.hpp  StrataArchiveException.cpp  StrataArchiveException.hpp
Source/Archives/GZIP/: GZIPArchive.cpp  GZIPArchive.hpp
Source/Archives/MPQ/: MPQArchive.cpp  MPQArchive.hpp  MPQArchiveException.hpp
Source/AssetManager/: StrataRunner.cpp  StrataRunner.hpp  StrataRunnerException.cpp  StrataRunnerException.hpp
Source/Configuration/: StrataConfig.cpp  StrataConfig.hpp  StrataConfigException.cpp  StrataConfigException.hpp
Source/Conversion/Audio/: StrataAudio.cpp  StrataAudio.hpp
Source/Conversion/Audio/CDParanoia/: CDParanoia.cpp  CDParanoia.hpp
Source/Conversion/Audio/FFmpeg/: AudioFFmpeg.cpp  AudioFFmpeg.hpp
Source/Conversion/Audio/Libav/: AudioLibav.cpp  AudioLibav.hpp
Source/Conversion/Image/: StrataImage.cpp  StrataImage.hpp  StrataImageException.cpp  StrataImageException.hpp
Source/Conversion/Image/GRPImage/: GRPImage.cpp  GRPImage.hpp
Source/Conversion/Image/ImageMagick/: MagickImage.cpp  MagickImage.hpp
Source/Conversion/Image/StrataGRPImage/: StrataGRPImage.cpp  StrataGRPImage.hpp
Source/Conversion/Images/ImageMagick/: MagickImage.cpp  MagickImage.hpp
Source/Conversion/Video/: StrataVideo.cpp  StrataVideo.hpp
Source/Conversion/Video/Libav/: VideoLibav.cpp  VideoLibav.hpp
Source/GUIs/Cocoa/: AppDelegate.h  AppDelegate.mm  StrataExtract-Info.plist  StrataExtract-Prefix.pch
Source/GUIs/Cocoa/ViewControllers/LogViewController/: LogViewController.h  LogViewController.mm
Source/GUIs/Cocoa/ViewControllers/MainViewController/: MainViewController.h  MainViewController.mm
Source/GUIs/Cocoa/Xibs/: Main.xib
Source/GUIs/GTKMM/: main.cpp
Source/GUIs/Quartz/: StrataExtract-Info.plist  main.mm
Source/GUIs/Quartz/Xibs/: Main.xib  MainMenu.xib
UnitTests/: mainUnitTests.cpp  mainUnitTests.hpp
UnitTests/AssetManager/: StrataRunnerUnitTests.cpp  StrataRunnerUnitTests.hpp
UnitTests/Configuration/: StrataConfigUnitTests.cpp  StrataConfigUnitTests.hpp
cmake/modules/: FindFFMPEG.cmake
